Added google sign in button.

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,4 +10,14 @@ page-login {
       display: inline-block;
     }
   }
+  .google{
+    width: 191px;
+    height: 46px;
+    background: color($colors, primary) url("../assets/imgs/google.svg") no-repeat;
+    span{
+      margin-left: 14px;
+      font-size: 12px;
+    }
+  }
+
 }
